--- a/Formulario de consulta pacientes.html
+++ b/Formulario de consulta pacientes.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-    <title> pagina de inicio </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> base de datos pacientes </title>
 
-    <link rel="stylesheet" href="estilos.css"> = Enlaza a archivo con codigo css
+    <link rel="stylesheet" href="estilos.css"> = <!--Enlaza a archivo con codigo css-->
 </head>
 
 <body>
@@ -14,7 +15,10 @@
         <img src="ImagenesHospiCasa/pngwing.com.png " alt = "Logo Hospital"> 
         <ul>
             <li><a href="index.html">Inicio</a><//li>
-            <li><a href="Hospitalizacion.html">Hospitalización</a><//li>
+            <li><a href="Formulario.html">Registro de usuarios</a><//li>
+            <li><a href="FormularioMedicos.html">Registro de medicos</a><//li>
+            <li><a href="FormularioFamiliares.html">Registro de familiares</a><//li>
+            <li><a href="consulta_un_paciente.html">Consultar un paciente</a><//li>
         </ul>
     </nav>    
     <header> 
@@ -26,11 +30,9 @@
         <h2>Pacientes registrados</h2>
         <div id="info-pacientes">
             <div id="cargando">Cargando...</div><br><br><br><br><br>
-        <div>
-            <img src="ImagenesHospiCasa/pngwing.com (3).png" width="400px" height="453px" alt = "Imagen de atencion al cliente"> 
         </div>
     </div>
-        
+    <!--<img src="ImagenesHospiCasa/pngwing.com (3).png" width="300px" height="453px" alt = "Imagen de atencion al cliente">-->
    
 <footer>
     <h3>Gracias por confiar en nuestro servicio</h3>
