--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> pagina de inicio </title>
 
     <link rel="stylesheet" href="estilos.css">
@@ -13,8 +14,10 @@
     <nav>
         <img src="ImagenesHospiCasa/pngwing.com.png " alt = "Logo Hospital"> 
         <ul>
-            <li><a href="Hospitalizacion.html">Hospitalización</a><//li>
             <li><a href="Formulario.html">Registro de usuarios</a><//li>
+            <li><a href="FormularioMedicos.html">Registro de medicos</a><//li>
+            <li><a href="FormularioFamiliares.html">Registro de familiares</a><//li>
+            <li><a href="consulta_un_paciente.html">Consultar un paciente</a><//li>
             <li><a href="Formulario de consulta pacientes.html">Consultar pacientes</a><//li>
         </ul>
     </nav>    
